k8s/infrastructure/catalogue-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  namespace: ministore
  labels:
    app: catalogue-db
spec:
  selector:
    matchLabels:
      app: catalogue-db
  template:
    metadata:
      labels:
        app: catalogue-db
    spec:
      automountServiceAccountToken: false
      containers:
        - name: catalogue-db
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresql-persistent-storage
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
      volumes:
        - name: postgresql-persistent-storage
          persistentVolumeClaim:
            claimName: catalogue-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db-svc
  namespace: ministore
spec:
  ports:
    - port: 5432
  selector:
    app: catalogue-db
  clusterIP: None
