k8s/infrastructure/feedback-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-db
  namespace: ministore
  labels:
    app: feedback-db
spec:
  selector:
    matchLabels:
      app: feedback-db
  template:
    metadata:
      labels:
        app: feedback-db
    spec:
      automountServiceAccountToken: false
      containers:
        - name: feedback-db
          image: mongo:7
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-persistent-storage
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: feedback-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-db-svc
  namespace: ministore
spec:
  ports:
    - port: 27017
  selector:
    app: feedback-db
  clusterIP: None
