k8s/infrastructure/loki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: ministore
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      automountServiceAccountToken: false
      containers:
        - name: loki
          image: grafana/loki:2.9.4
          ports:
            - name: http
              containerPort: 3100
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: loki-svc
  namespace: ministore
  labels:
    app: loki
spec:
  type: ClusterIP
  ports:
    - port: 3100
  selector:
    app: loki
