k8s/infrastructure/tempo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: ministore
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: tempo-config
          configMap:
            name: tempo-config-cm
      containers:
        - name: tempo
          image: grafana/tempo:2.3.1
          args:
            - -config.file=/etc/tempo/tempo.yaml
          ports:
            - name: http
              containerPort: 3200
            - name: otlp-grpc
              containerPort: 4317
            - name: otlp-http
              containerPort: 4318
            - name: grpc
              containerPort: 9095
            - name: zipkin
              containerPort: 9411
            - name: jaeger
              containerPort: 14268
          volumeMounts:
            - mountPath: /etc/tempo
              name: tempo-config
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: tempo-svc
  namespace: ministore
  labels:
    app: tempo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3200
    - name: otlp-grpc
      port: 4317
    - name: otlp-http
      port: 4318
    - name: grpc
      port: 9095
    - name: zipkin
      port: 9411
    - name: jaeger
      port: 14268
  selector:
    app: tempo
