k8s/infrastructure/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: ministore
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: config
          configMap:
            name: ministore-keycloak-realm
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.7
          ports:
            - containerPort: 8080
          args:
            - "start-dev"
            - "--import-realm"
          volumeMounts:
            - mountPath: /opt/keycloak/data/import
              name: config
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: ministore
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: ministore
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  rules:
    - host: keycloak.mini.store.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc
                port:
                  name: http
