k8s/infrastructure/victoria-metrics.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoria-metrics
  namespace: ministore
  labels:
    app: victoria-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: victoria-metrics
  template:
    metadata:
      labels:
        app: victoria-metrics
    spec:
      automountServiceAccountToken: false
      containers:
        - name: victoria-metrics
          image: victoriametrics/victoria-metrics:v1.93.10
          args: ["-httpListenAddr=0.0.0.0:8428"]
          ports:
            - name: http
              containerPort: 8428
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: vm-svc
  namespace: ministore
  labels:
    app: victoria-metrics
spec:
  type: ClusterIP
  ports:
    - port: 8428
  selector:
    app: victoria-metrics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoria-metrics-ingress
  namespace: ministore
spec:
  rules:
    - host: metrics.mini.store.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vm-svc
                port:
                  number: 8428
